# rs_snake

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
pkg/: package.json  rs_snake.d.ts  rs_snake.js  rs_snake_bg.wasm  rs_snake_bg.wasm.d.ts
src/: lib.rs
src/random/: mod.rs
src/snake/: mod.rs
