[package]
name = "rs_snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

# reformating: web-sys = {version="0.3.61", features = ["Window", "Document", "Element", "HtmlElement", "console"]}
[dependencies.web-sys]
version="0.3.61" 
features = [
    "Window", "Document", "Element", "HtmlElement", 
    "HtmlDivElement", "console", "CssStyleDeclaration",
    ]
